Remove javaOpts and mainClass config properties